infra/k8s/expiration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expiration
spec:
    selector:
        matchLabels:
            app: expiration
    template:
        metadata:
            labels:
                app: expiration
        spec:
            containers:
                - name: expiration
                  image: ranjankumar2000/expiration
