infra/k8s/auth-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-mongo
spec:
    selector:
        matchLabels:
            app: auth-mongo
    template:
        metadata:
            labels:
                app: auth-mongo
        spec:
            containers:
                - name: auth-mongo
                  image: mongo@sha256:9bed7cae49c95e0294775efe35c867094d69d844167a79194be63baf7e032328

---
apiVersion: v1
kind: Service
metadata:
    name: auth-mongo-srv
spec:
    selector:
        app: auth-mongo
    ports:
        - port: 27017
          targetPort: 27017
          name: 'auth-db'
          protocol: TCP
