infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client
spec:
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: ranjankumar2000/client

---
apiVersion: v1
kind: Service
metadata:
    name: client-srv
spec:
    selector:
        app: client
    ports:
        - port: 3000
          targetPort: 3000
