infra/k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: orders
spec:
    selector:
        matchLabels:
            app: orders
    template:
        metadata:
            labels:
                app: orders
        spec:
            containers:
                - name: orders
                  image: ranjankumar2000/orders
---
apiVersion: v1
kind: Service
metadata:
    name: orders-srv
spec:
    selector:
        app: orders
    ports:
        - port: 4000
          targetPort: 4000
