infra/k8s/payments-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payments-mongo
spec:
    selector:
        matchLabels:
            app: payments-mongo
    template:
        metadata:
            labels:
                app: payments-mongo
        spec:
            containers:
                - name: payments-mongo
                  image: mongo@sha256:9bed7cae49c95e0294775efe35c867094d69d844167a79194be63baf7e032328

---
apiVersion: v1
kind: Service
metadata:
    name: payments-mongo-srv
spec:
    selector:
        app: payments-mongo
    ports:
        - port: 27017
          targetPort: 27017
          name: "payments-db"
          protocol: TCP
