infra/k8s/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payments
spec:
    selector:
        matchLabels:
            app: payments
    template:
        metadata:
            labels:
                app: payments
        spec:
            containers:
                - name: payments
                  image: ranjankumar2000/payments
---
apiVersion: v1
kind: Service
metadata:
    name: payments-srv
spec:
    selector:
        app: payments
    ports:
        - port: 3000
          targetPort: 3000
          name: payments
          protocol: TCP
