infra/k8s/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets
spec:
    selector:
        matchLabels:
            app: tickets
    template:
        metadata:
            labels:
                app: tickets
        spec:
            containers:
                - name: tickets
                  image: ranjankumar2000/tickets
---
apiVersion: v1
kind: Service
metadata:
    name: tickets-srv
spec:
    selector:
        app: tickets
    ports:
        - port: 4000
          targetPort: 4000
